fix: fix for macos cef detaching and StackOverflowErrors